--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,8 +14,9 @@
         while developing!
         -->
 
-    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/cube.css")">
-    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/page.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/cube.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/page.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap.min.css")">
 
     <script src="@Url.Content("~/scripts/cubes/tween.js")"></script>
     <script src="@Url.Content("~/scripts/cubes/Three.noStrict.js")"></script>
@@ -28,48 +29,33 @@
     -->
 </head>
 <body>
-    <div id="controllers" style="color:black; display: block; margin:15px;"></div>
-    <div id="container">
+
+<div id="cube_container"></div>
+
+<div id="container" class="container">
+    <div class="btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+            <button type="button" id="sendToSolver" class="btn btn-success btn-lg">Try solve available states!</button>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" id="performQueryResult" class="btn btn-default btn-lg">Perform moves <span id="numberOfMoves" class="badge">-</span></button>
+        </div>
     </div>
 
-    <div id="fail">
-        <div class="upgradetext">To play, please use the latest version of one of the following browsers</div>
+    <div class="alert alert-info" role="alert" id="queryResult">
+        Result is going to be here !
     </div>
+</div>
 
-<br>
-
-    <button onclick='window.cube.twist("R");'>R</button>
-    <button onclick='window.cube.twist("r");'>R'</button>
-
-    <button onclick='window.cube.twist("s");'>S</button>
-    <button onclick='window.cube.twist("f");'>f</button>
-    <button onclick='window.cube.twist("b");'>b</button>
-    <button onclick='window.cube.twist("u");'>u</button>
-    <button onclick='window.cube.twist("e");'>equator</button>
-
-    <button onclick='window.cube.twist("d");'>down</button>
-    <button onclick='window.cube.twist("m");'>middle</button>
-    <button onclick='window.cube.twist("l");'>L</button>
-
-    <button onclick='window.cube.twist("x");'>X</button>
-    <button onclick='window.cube.twist("y");'>Y</button>
-    <button onclick='window.cube.twist("z");'>Z</button>
-
-    <br>
-
-    <button id="sendToSolver"> Cube to data</button>
-    <button id="performQueryResult"> Perform moves</button>
-    <br>
-    <span style="font-size: 50px;" id="queryResult">Result are going to be here !</span>
-
-    <script src="@Url.Content("~/scripts/cubes/iecss3d.js")"></script>
-    <script src="@Url.Content("~/scripts/cubes/ierenderer.js")"></script>
-    <script src="@Url.Content("~/scripts/cubes/deviceMotion.js")"></script>
-    <script src="@Url.Content("~/scripts/cubes/locked.js")"></script>
-    <script src="@Url.Content("~/scripts/cubes/frames.js")"></script>
-    <script src="@Url.Content("~/scripts/cubes/main.js")"></script>
-    <!--
-        Scripts.Render("~/bundles/cube")
-    -->
+<script src="@Url.Content("~/scripts/cubes/iecss3d.js")"></script>
+<script src="@Url.Content("~/scripts/cubes/ierenderer.js")"></script>
+<script src="@Url.Content("~/scripts/cubes/deviceMotion.js")"></script>
+<script src="@Url.Content("~/scripts/cubes/locked.js")"></script>
+<script src="@Url.Content("~/scripts/cubes/frames.js")"></script>
+<script src="@Url.Content("~/scripts/cubes/main.js")"></script>
+<script src="@Url.Content("~/scripts/bootstrap.min.js")"></script>
+<!--
+    Scripts.Render("~/bundles/cube")
+-->
 </body>
 </html>
