--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
 <div id="container" class="container">
     <div class="btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
         <div class="btn-group" role="group">
-            <button type="button" id="sendToSolver" class="btn btn-success btn-lg">Try solve available states!</button>
+            <button type="button" id="sendToSolver" class="btn btn-success btn-lg">Try to solve available states!</button>
         </div>
         <div class="btn-group" role="group">
             <button type="button" id="performQueryResult" class="btn btn-default btn-lg">Perform moves <span id="numberOfMoves" class="badge">-</span></button>
